<resources>
    <string name="app_name">Calculator</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Multiply">*</string>
    <string name="Point">.</string>
    <string name="Button0">0</string>
    <string name="ButtonCLR">CLR</string>
    <string name="Division">/</string>
    <string name="Equal">=</string>
    <string name="defaultval">0</string>
</resources>