<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >


    <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:text="@string/defaultval"
            android:gravity="end|bottom"
            android:textSize="40sp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">


        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:text="@string/Button7"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            android:onClick="ondigit"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:onClick="ondigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Button8"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:onClick="ondigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Button9"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:onClick="onexpression"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Plus"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />




    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">


        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:onClick="ondigit"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Button4"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:onClick="ondigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Button5"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="ondigit"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Button6"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Minus"
            android:onClick="onexpression"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />



    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">


        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="ondigit"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Button1"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="ondigit"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Button2"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:onClick="ondigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Button3"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:onClick="onexpression"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Multiply"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />



    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">


        <Button
            android:id="@+id/buttonPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Point"
            android:onClick="ondecimal"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:onClick="ondigit"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Button0"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/buttonCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/ButtonCLR"
            android:onClick="onclear"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:onClick="onexpression"
            android:text="@string/Division"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />



    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">


        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/Equal"
            android:onClick="oncalculate"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_gray"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>






</LinearLayout>